@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}
 
 {{$NEXT}}
+  - changed handling of default stdin and stdout to match more closely what
+    I wanted
 
 0.008     2012-03-01 13:08:38 America/Boise
   - fixed doc error for croak_on_err function
